Fix icon alignment

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -206,10 +206,9 @@ body
   a
     color: $color
 
-  svg
+  .icon
     fill: $color
     margin-right: -3px
-    vertical-align: sub
 
 // .avatar
 //   border: #e8e5dc 1px solid
@@ -359,6 +358,12 @@ body
   fill: white
 .icon
   @extend .icon-dark
+
+  width: 1em
+  height: 1em
+  position: relative
+  top: .125em
+  vertical-align: baseline
 
 .navbar-dark
   .icon
